--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -711,6 +711,11 @@ body {
   }
 }
 
+[role="tab"] {
+  color: hsl(var(--clr-light) / 1);
+  transition: color 500ms ease-in-out;
+}
+
 [role="tab"]:focus {
-  color: limegreen;
+  color: hsl(var(--clr-white) / 1);
 }
