--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -473,6 +473,34 @@ select {
   background-color: hsl(var(--clr-white) / 1);
 }
 
+.number-indicators > * {
+  font-size: var(--fs-700);
+  font-family: var(--ff-serif);
+  cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  width: 2em;
+  height: 2em;
+  background-color: hsl(var(--clr-dark));
+  transition: background-color 500ms linear;
+  color: hsl(var(--clr-white) / 1);
+  border: 2px solid hsl(var(--clr-white) / 40%);
+}
+
+.number-indicators > *:hover,
+.number-indicators > *:focus {
+  background-color: hsl(var(--clr-white) / 0.25);
+  color: hsl(var(--clr-white) / 1);
+  border: 2px solid hsl(var(--clr-white) / 40%);
+  transition: opacity 500ms linear, transform 750ms ease-in-out;
+}
+
+.number-indicators > *:active {
+  background-color: hsl(var(--clr-white));
+  opacity: 1;
+}
+
 /* ----------------------------- */
 /* Page specific background      */
 /* ----------------------------- */
@@ -529,6 +557,23 @@ body {
 @media (min-width: 45rem) {
   .destination {
     background-image: url(./assets/destination/background-destination-desktop.jpg);
+  }
+}
+
+.technology {
+  background-image: url(./assets/technology/background-technology-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+  .technology {
+    background-position: center center;
+    background-image: url(./assets/technology/background-technology-tablet.jpg);
+  }
+}
+
+@media (min-width: 45rem) {
+  .technology {
+    background-image: url(./assets/technology/background-technology-desktop.jpg);
   }
 }
 
