--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -8,14 +8,32 @@
 :root {
   /* colors */
 
-  /* Create colors then add them onto design system */
-  --clr-background: 212, 65%, 8%;
+  /* BLUE DESIGN SYSTEM */
+  /* --clr-background: 212, 65%, 8%;
   --clr-dark: 212, 65%, 8%;
   --clr-darkblue: 194, 73%, 36%;
   --clr-primary: 200, 66%, 69%;
   --clr-secondary: 189, 63%, 36%;
   --clr-paragraph: 214, 20%, 69%;
+  --clr-white: 0 0% 100%; */
+
+  /* RED DESIGN SYSTEM */
+  --clr-background: 212, 65%, 8%;
+  --clr-dark: 212, 65%, 8%;
+  --clr-darkblue: 194, 73%, 36%;
+  --clr-primary: 0, 95%, 75%;
+  --clr-secondary: 0, 88%, 66%;
+  --clr-paragraph: 214, 20%, 69%;
   --clr-white: 0 0% 100%;
+
+  /* GREEN DESIGN SYSTEM */
+  /* --clr-background: 212, 65%, 8%;
+  --clr-dark: 212, 65%, 8%;
+  --clr-darkblue: 194, 73%, 36%;
+  --clr-primary: 145, 46%, 51%;
+  --clr-secondary: 52, 45%, 28%;
+  --clr-paragraph: 214, 20%, 69%;
+  --clr-white: 0 0% 100%; */
 
   /* font-sizes */
   --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
@@ -220,6 +238,11 @@ select {
 .text-accent {
   color: hsl(var(--clr-primary));
 }
+
+.text-secondary {
+  color: hsl(var(--clr-secondary));
+}
+
 .text-white {
   color: hsl(var(--clr-white));
 }
@@ -531,70 +554,70 @@ body {
 }
 /* home */
 .home {
-  background-image: url(./assets/home/background-home-mobile.jpg);
+  background-image: url(./assets/home/Mobile-background.svg);
 }
 
-@media (min-width: 35rem) {
+@media (min-width: 35em) {
   .home {
     background-position: center center;
-    background-image: url(./assets/home/background-home-tablet.jpg);
+    background-image: url(./assets/home/Tablet-background.svg);
   }
 }
 
 @media (min-width: 45rem) {
   .home {
-    background-image: url(./assets/home/background-home-desktop.jpg);
+    background-image: url(./assets/home/Desktop-background.svg);
   }
 }
 
 .crew {
-  background-image: url(./assets/crew/background-crew-mobile.jpg);
+  background-image: url(./assets/crew/Mobile-background.svg);
 }
 
 @media (min-width: 35rem) {
   .crew {
     background-position: center center;
-    background-image: url(./assets/crew/background-crew-tablet.jpg);
+    background-image: url(./assets/crew/Tablet-background.svg);
   }
 }
 
 @media (min-width: 45rem) {
   .crew {
-    background-image: url(./assets/crew/background-crew-desktop.jpg);
+    background-image: url(./assets/crew/Desktop-background.svg);
   }
 }
 
 .destination {
-  background-image: url(./assets/destination/background-destination-mobile.jpg);
+  background-image: url(./assets/destination/Mobile-background.svg);
 }
 
 @media (min-width: 35rem) {
   .destination {
     background-position: center center;
-    background-image: url(./assets/destination/background-destination-tablet.jpg);
+    background-image: url(./assets/destination/Tablet-background.svg);
   }
 }
 
 @media (min-width: 45rem) {
   .destination {
-    background-image: url(./assets/destination/background-destination-desktop.jpg);
+    background-image: url(./assets/destination/Desktop-background.svg);
   }
 }
 
 .technology {
-  background-image: url(./assets/technology/background-technology-mobile.jpg);
+  background-image: url(./assets/technology/Mobile-background.svg);
 }
 
 @media (min-width: 35rem) {
   .technology {
     background-position: center center;
-    background-image: url(./assets/technology/background-technology-tablet.jpg);
+    background-image: url(./assets/technology/Tablet-background.svg);
   }
 }
 
 @media (min-width: 45rem) {
   .technology {
-    background-image: url(./assets/technology/background-technology-desktop.jpg);
+    background-image: url(./assets/technology/Desktop-background.svg);
   }
 }
 
